Fixed button color on smaller screens

--- a/music-player/assets/css/style.css
+++ b/music-player/assets/css/style.css
@@ -77,18 +77,15 @@ button {
 
 @media (max-width: 767px) {
   .player-box {
-    padding: 50vh 20px 10px 20px; /* Adjust padding for mobile screens */
+    padding: 50vh 20px 10px 20px;
   }
 
   #icon-box {
-    padding: 1vh 1em; /* Adjust padding for mobile screens */
-    font-size: 1.5em; /* Adjust font size for mobile screens */
+    padding: 1vh 1em;
+    font-size: 1.5em;
   }
-}
 
-.filled {
-  background-color: rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  color: #ffffff;
-  border-radius: 5px;
+  button {
+    color: black;
+  }
 }
